# telegram-donation-bot

./: Dockerfile  main.py  pyproject.toml
