[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "A simple Telegram donation bot."
authors = ["fikre <fikrehmariam77@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^3.7"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

